--- a/TwitterClone/TwitterClone.csproj
+++ b/TwitterClone/TwitterClone.csproj
@@ -90,6 +90,7 @@
     <Content Include="Scripts\jquery-1.9.1.js" />
     <Content Include="Scripts\jquery-1.9.1.min.js" />
     <Content Include="StyleSheet.css" />
+    <None Include="Gotta Cache Them All!" />
     <Content Include="twita.js" />
     <Content Include="Web.config" />
     <Content Include="Scripts\jquery-1.9.1.min.map" />
